[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-cspm"
version = "0.1.0"
description = "Lightweight AWS Cloud Security Posture Management CLI"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "awscrt",
    "rich>=13.0",
]

[project.scripts]
cspm = "cspm.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["cspm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
